--- a/Lab 07.vcxproj
+++ b/Lab 07.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Lab 07.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="position.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
