--- a/Lab 07.vcxproj.filters
+++ b/Lab 07.vcxproj.filters
@@ -18,9 +18,24 @@
     <ClCompile Include="Lab 07.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="position.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\week5\lab05\velocity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\week5\lab05\acceleration.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="position.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\week5\lab05\acceleration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\week5\lab05\velocity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
